# meshmonk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  Makefile  NOTICE  README.md  example  index.html  issues.jsonl  libmeshmonk.dylib  manifest  meshmonk.cpp  meshmonk.hpp  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  ubuntu_install_meshmonk.sh
.claude/: settings.json
.github/workflows/: benchmarks-nightly.yml  ci.yml  nightly.yml  release.yml
MeshMonkExtreme/: global.hpp  main.cpp
MeshMonkExtreme/core/: BaseCorrespondenceFilter.cpp  BaseCorrespondenceFilter.hpp  CorrespondenceFilter.cpp  CorrespondenceFilter.hpp  Downsampler.cpp  Downsampler.hpp  InlierDetector.cpp  InlierDetector.hpp  NonrigidRegistration.cpp  NonrigidRegistration.hpp  PyramidNonrigidRegistration.cpp  PyramidNonrigidRegistration.hpp  RigidRegistration.cpp  RigidRegistration.hpp  RigidTransformer.hpp  ScaleShifter.cpp  ScaleShifter.hpp  SymmetricCorrespondenceFilter.cpp  SymmetricCorrespondenceFilter.hpp  ViscoElasticTransformer.cpp  ViscoElasticTransformer.hpp
MeshMonkExtreme/helpers/: DataImporter.cpp  DataImporter.hpp  (+2 more)
MeshMonkRegistration/: InlierDetector.hpp  MeshMonkRegistration.cbp  MeshMonkRegistration.depend  MeshMonkRegistration.layout  main.cpp
api/: index.html
benchmarks/: README.md  _harness.py  baseline.json  bench_nonrigid.py  bench_pyramid.py  bench_rigid.py  conftest.py  test_harness_sizing.py
bindings/: bindings.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build3/: CMakeCache.txt  Makefile  cmake_install.cmake
build4/: CMakeCache.txt  Makefile  cmake_install.cmake
build_verify/: CMakeCache.txt  Makefile  cmake_install.cmake
cli/: CMakeLists.txt  cli.cpp  index.html
conda/: meta.yaml
data/: DemoFaceLandmarks.csv
demo/: .gitignore  DemoFaceMapping.m  Template.mat  TemplateLandmarks.csv  _common.py  demoFace.mtl  e2e_demo.py  nonrigid_demo.py  pyproject.toml  pyramid_demo.py  rigid_demo.py  rigid_transform.txt  test_compute_correspondences.m  test_downsample_mesh.m  test_nonrigid_registration.m  test_nonrigid_registration_modular.m  test_pyramid_registration.m  test_pyramid_registration_modular.m  test_rigid_registration.m  test_rigid_registration_modular.m
docs/: cli.md  gotchas.md  index.md  migration-from-matlab.md  osx.md  osx2.md  packaging.md  quickstart.md  ubuntu  ubuntu.md  ubuntu_install_meshmonk.sh  v0.0-release-notes.md  v0.0-reproducibility-check.md  vtk.md  windows.md
examples/: bunnyIcp.py  bunnyNonRigid.py  context.py  cubusIcp.py  icpTestParisSkin.py  pyramidTest.py
history/: 2026-04-17-meshmonk-modernization-design.md  2026-04-17-meshmonk-modernization-v0.0-design.md  2026-04-17-meshmonk-modernization-v0.1-design.md  2026-04-17-meshmonk-modernization-v0.2-design.md  2026-04-17-meshmonk-modernization-v0.3-design.md  2026-04-19-meshmonk-modernization-v0.3.1-design.md  2026-04-19-meshmonk-modernization-v0.4-design.md  2026-04-19-meshmonk-modernization-v0.5-design.md  2026-04-21-perf-track-design.md  2026-04-22-api-polish-design.md  2026-04-23-neighbourfinder-openmp-design.md  2026-04-23-neighbourfinder-profiling-design.md  2026-04-23-profiling-design.md  api-polish-fixes-20260422.md  meshmonk-modernization-v0.0-fixes-20260417.md  meshmonk-modernization-v0.1-fixes-20260417.md  meshmonk-modernization-v0.2-fixes-20260419.md  meshmonk-modernization-v0.3-fixes-20260419.md  neighbourfinder-profiling-fixes-20260423.md  perf-track-fixes-20260422.md  profiling-fixes-20260423.md  v01-review-fixes-20260418.md  workspace-6q1.2-fixes-20260417.md  workspace-6q1.3-fixes-20260417.md
matlab/: clean_downsampled_faces.m  compute_correspondences.cpp  compute_inlier_weights.cpp  compute_nonrigid_transformation.cpp  compute_normals.cpp  compute_rigid_transformation.cpp  downsample_mesh.cpp  downsample_mesh_clean.m  mex_all.m  mex_windows_all.m  mystream.cpp  nonrigid_registration.cpp  pyramid_registration.cpp  readLandmarksMeVisLabXML.m  read_vertices_and_faces_from_obj_file.m  rigid_registration.cpp  scaleshift_mesh.cpp  test_compute_correspondences.m  test_downsample_mesh.m  test_meshmonk.m  test_meshmonk_mexing.cpp  test_meshmonk_mexing.mexa64  test_nonrigid_registration.m  test_nonrigid_registration_modular.m  test_pyramid_registration.m  test_pyramid_registration_modular.m  test_rigid_registration.m  test_rigid_registration_modular.m
meshmonk/: Makefile  README.md  __init__.py  __main__.py  _meshmonk_core.pyi  _types.py  cli.py  core.py  example.cpp  helpers.py  main.cpp  meshmonk.cpp  meshmonk.hpp  mmnonrigid.py
meshmonkpy/: mmnonrigid.py
migration-from-matlab/: index.html
osx/: index.html
profiling/: __init__.py  run_local.py  run_profile.py
quickstart/: index.html
registration/: core.py  helpers.py
scripts/: generate_profiling_meshes.py  linux_e2e_smoke.sh
search/: search_index.json
src/: CorrespondenceFilter.cpp  CorrespondenceFilter.hpp  Downsampler.hpp  InlierDetector.hpp  NeighbourFinder.hpp  SymmetricCorrespondenceFilter.hpp  ViscoElasticTransformer.cpp  ViscoElasticTransformer.hpp  bunnyIcp.py  bunnyTest.py  helper_functions.hpp  icpTestParisSkin.py  kdtreeTest.py  main.py  meshToMatrices.py  numpyToVtk.py  pyramidTest.py  vtkToNumpy.py
tests/: conftest.py  context.py  test_anchor.py  test_api_enhancements.py  test_bug_fixes.py  test_build_infra_v03.py  test_cli.py  test_e2e.py  test_golden.py  test_helpers.py  test_input_validation.py  test_integration_v02.py  test_integration_v03.py  test_kwargs_refactor.py  test_memory_layout_regression.py  test_meshmonk_error.py  test_meshmonk_error_code.py  test_neighbour_caching_729.py  test_primitives.py  test_profiling_bindings_748_2.py  test_profiling_driver_748_4.py  test_profiling_meshes_748_3.py  test_registration.py  test_registration_e2e.py  test_rigid.py  test_rigid_analytical.py  test_silent_logger.py  test_type_hints_h31.py  test_v03_fixes.py
ubuntu/: index.html
v0.0-release-notes/: index.html
v0.0-reproducibility-check/: index.html
windows/: index.html
(+185 files in other folders)
