[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0", "cmake>=3.26"]
build-backend = "scikit_build_core.build"

[project]
name = "meshmonk"
version = "0.1.0"
description = "Python-first 3D mesh registration library"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "jsnyde0" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "typer>=0.9",
]

[project.optional-dependencies]
io = ["trimesh>=4.0"]
dev = ["pytest", "pre-commit", "ruff", "scipy>=1.11"]

[project.scripts]
meshmonk = "meshmonk.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
